--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,6 +15,10 @@ jobs:
 
     
     steps:
+    - name: Stop and Remove all Containers
+      run: |
+        docker stop $(docker ps -q)
+         docker rm $(docker ps -aq)    
     - name: build
       run: |
        echo "Building..."
